log
do., 10 de abr. de 2022 10:37:04: 
 hashmap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
658e514
do., 10 de abr. de 2022 11:05:16: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:44:10: error: unused variable 'posicion' [-Werror=unused-variable]
     long posicion = hash(key , map->capacity);
          ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9e4d471
do., 10 de abr. de 2022 11:05:37: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d7c9b9a
do., 10 de abr. de 2022 11:18:43: 
 hashmap.c | 22 ++++++++++++++++++++--
 1 file changed, 20 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
d91253c
do., 10 de abr. de 2022 11:31:18: 
 hashmap.c | 44 +++++++++++++++++++++++++++++++++-----------
 1 file changed, 33 insertions(+), 11 deletions(-)
 tests:  6|4
total_score: 30/70
d76c4e1
do., 10 de abr. de 2022 11:34:19: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:102:26: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
             map->current = key;
                          ^
cc1.exe: all warnings being treated as errors
Compilation failed
69148af
do., 10 de abr. de 2022 11:35:46: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:102:26: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
             map->current = map->buckets[index]->value;
                          ^
cc1.exe: all warnings being treated as errors
Compilation failed
47e1ae6
do., 10 de abr. de 2022 11:37:03: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
1629c14
do., 10 de abr. de 2022 11:39:17: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
d0d53b4
do., 10 de abr. de 2022 11:39:39: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
3d04ab6
do., 10 de abr. de 2022 11:40:34: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
f2d56b5
do., 10 de abr. de 2022 11:50:46: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|0
28b8baf
do., 10 de abr. de 2022 11:51:44: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
hashmap.c: In function 'firstMap':
hashmap.c:130:26: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
             map->current = map->buckets[cont]->key;
                          ^
cc1.exe: all warnings being treated as errors
Compilation failed
de21f65
do., 10 de abr. de 2022 11:52:27: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4eecd87
do., 10 de abr. de 2022 11:53:49: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
c304655
do., 10 de abr. de 2022 11:55:31: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
1fbfd39
